09. semester/MlaskalCompiler/public-ro/mlc/du6/tests/du6-test32.icmout
ERROR: Jump out of code on IP=20
